<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ui"
    tools:context=".activity.UiActivity">

    <LinearLayout

        android:layout_marginTop="@dimen/size240dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/edt_useremaillognin"
            android:textSize="@dimen/size15sp"
            android:padding="@dimen/size15dp"
            android:layout_marginRight="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size30dp"
            android:background="@drawable/custom_textview_sign_in_out"
            android:layout_gravity="center"
            android:textColorHint="@color/colorLight_Pink"
            android:hint="@string/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_userpasslognin"
            android:layout_marginTop="@dimen/size20dp"
            android:textSize="@dimen/size15sp"
            android:padding="@dimen/size15dp"
            android:layout_marginRight="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size30dp"
            android:background="@drawable/custom_textview_sign_in_out"
            android:layout_gravity="center"
            android:textColorHint="@color/colorLight_Pink"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_lognin"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18sp"
            android:inputType="textCapWords"
            android:text="@string/dangnhap"
            android:layout_marginTop="@dimen/size25dp"
            android:background="@drawable/custom_button_sign_in_out"
            android:layout_marginRight="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/size10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/quenpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_createAcc"
            android:layout_marginTop="@dimen/size30dp"
            android:inputType="textCapWords"
            android:textColor="@color/colorWhite"
            android:text="@string/taotaikhoan"
            android:layout_marginRight="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size30dp"
            android:background="@drawable/custom_but_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>